fix: Fixed blurred lines

--- a/src/components/camera-canvas.css
+++ b/src/components/camera-canvas.css
@@ -18,8 +18,44 @@
     height: 100%;
 	z-index: 1;
 }
-
 .camera-canvas .video-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+	z-index: 1;
+	background-color: rgb(255 255 255 / 20%);
+	backdrop-filter: blur(10px);
+	clip-path: polygon(
+		/* canvas left-top */
+		-1px -1px,
+		/* canvas left-bottom */
+		-1px calc(100% + 1px),
+
+		/* lens left-bottom */
+		calc(15vw + 1px) calc((100% - 95vw) - 3px),
+		/* lens left-top */
+		calc(15vw + 1px) calc(95vw + 3px),
+		/* lens right-top */
+		calc(100% - 15vw) calc(95vw + 3px),
+		/* lens right-bottom */
+		calc(100% - 15vw) calc((100% - 95vw) - 3px),
+		/* lens left-bottom 2 */
+		calc(15vw + 1px) calc((100% - 95vw) - 3px),
+
+		/* canvas left-bottom 2 */
+		-1px calc(100% + 1px),
+		/* canvas right-bottom */
+		calc(100% + 1px) calc(100% + 1px),
+		/* canvas right-top */
+		calc(100% + 1px) -1px
+	);
+}
+
+.camera-canvas .video-lens {
 	z-index: 5;
     position: absolute;
     left: 0;
@@ -48,7 +84,7 @@
 	height: 100%;
 }
 
-.camera-canvas  .video-overlay .lens {
+.camera-canvas  .video-lens .lens {
 	grid-area: lens;
 	border: 4px solid rgb(255 255 255 / 70%);
 	margin: -2px;
